# Medihelp-Redesigned

./: .gitignore  api.http  models.dot  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/tests/: test_models.py  test_serializers.py  test_views.py
appointments/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
appointments/tests/: test_models.py  test_serializers.py  test_views.py
config/: settings.py  urls.py
video-room/: celery.py  models.py  serializers.py  services.py  urls.py  views.py
